--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css">
   <script src="app.js" defer></script>
 </head>
+
 <body>
   <main class="main-container">
     <article class="main-content">
@@ -17,16 +19,18 @@
       </div>
       <div class="review-container">
         <div class="img-container">
-          <img src="./person-1.jpeg" id="review-img" alt="image of reviewer">
+          <img src="./person-2.jpg" id="reviewer-img" alt="image of reviewer">
         </div>
-        <p class="reviewer-name">Sara Jones</p>
-        <h3 class="occupation">UX DESIGNER</h3>
-        <P class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nam nulla sit sapiente libero inventore vero quos labore sequi veniam, molestias maiores mollitia laborum perferendis ipsum excepturi alias quibusdam quam!</P>
+          <p id="author">Sara Jones</p>
+          <h3 id="job">UX DESIGNER</h3>
+        <P id="reviews">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nam nulla sit
+          sapiente libero inventore vero quos labore sequi veniam, molestias maiores mollitia laborum perferendis ipsum
+          excepturi alias quibusdam quam!</P>
         <div class="chevron-container">
-          <button class="left-direction">
+          <button class="chevron left-direction">
             <i class="fas fa-chevron-left"></i>
           </button>
-          <button class="right-direction">
+          <button class="chevron right-direction">
             <i class="fas fa-chevron-right"></i>
           </button>
         </div>
